cabal-version:       3.0
name:                mutation
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             NONE
license-file:        LICENSE
author:              S. Koppier
maintainer:          stefan.koppier@outlook.com
-- copyright:
category:            Testing
extra-source-files:  CHANGELOG.md

executable mutation
    main-is:                Main.hs
    other-modules:          Syntax.Syntax
                          , Syntax.Pretty
                          , Syntax.DSL
                          , Syntax.Mutate
                          , Parsing.Lexer
                          , Parsing.Parser
                          , Data.Configuration
                          , Data.Positioned
                          , Text.Pretty
    build-depends:          base                 ^>=4.13.0.0
                          , parsec               ^>=3.1.14.0
                          , pretty               ^>=1.1.3.6
                          , array                ^>=0.5.4.0
                          , containers           ^>=0.6.2.1
                          , hashable             ^>=1.3.0.0
                          , polysemy             ^>=1.3.0
                          , polysemy-plugin      ^>=0.2.5.2
                          , lens                 ^>=4.19.2
                          , directory            ^>=1.3.5.0
                          , random               ^>=1.1
                          , optparse-applicative ^>=0.16.1.0
    build-tool-depends:     alex:alex ^>=3.2.6
    hs-source-dirs:         src
    default-language:       Haskell2010
    default-extensions:     TypeSynonymInstances
                          , FlexibleInstances
                          , NamedFieldPuns
                          , LambdaCase
                          , DuplicateRecordFields
                          , RecordWildCards
                          , TemplateHaskell
                          , GADTs
                          , PolyKinds
                          , FunctionalDependencies
                          , RankNTypes
                          , FlexibleContexts
                          , DataKinds
    ghc-options:            -fplugin=Polysemy.Plugin